# tiny-llm-cuda

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  batch-main.py  main.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CACHE_UPDATE_SUMMARY.md  PRE_COMMIT.md  QUICKSTART.md  activation_interface.md  paged_attention_vs_padding.md
examples/: activation_usage.py  attention_usage.py
scripts/: dev-tools.py  setup-pre-commit.sh
src/: __init__.py  attention.py  basics.py  batch.py  embedding.py  generate.py  kv_cache.py  layer_norm.py  models.py  position_encoding.py  quantize.py  qwen2.py  sampler.py
src/cache/: generate.py  kv_cache.py  request.py
src/engine/: generate.py  kv_cache.py  request.py
src/extensions/: bindings.cpp  setup.py  test.py
src/layers/: __init__.py  activation.py  attention.py  embedding.py  layernorm.py  linear.py  position_encoding.py  sampler.py
src/models/: __init__.py  qwen2.py
src/utils/: __init__.py  model_utils.py  quantize.py
tests/: __init__.py  test_activation.py  test_batching.py  test_fla.py  test_gqa.py  test_mha.py  test_norm_mlp.py  test_qwen2.py  test_qwen2_with_kv_cache.py  test_rmsnorm.py  test_rope.py  test_transformers_qwen2.py  tinyllm_base.py  utils.py
tests/eval/: __init__.py  __main__.py  eval_gsm8k.py
tests/unittests/: test_activation.py  test_batch_rope_gqa.py  test_batching.py  test_mha.py  test_qwen2.py  test_qwen2_with_kv_cache.py  (+1 more)
(+5 files in other folders)
